--- a/wordpress-api/posts/main.css
+++ b/wordpress-api/posts/main.css
@@ -1,3 +1,16 @@
+/* Global */
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
+td img {
+  width: 50%;
+  height: auto;
+}
+
+/* SPIN */
 #spinner {
   visibility: hidden;
   width: 80px;
@@ -25,7 +38,6 @@
     transform: rotate(360deg);
   }
 }
-
 #spinner.show {
   visibility: visible;
 }
