--- a/wordpress-api/posts/css/main.css
+++ b/wordpress-api/posts/css/main.css
@@ -5,8 +5,8 @@ body {
   overflow-x: hidden;
 }
 
-td img {
-  width: 50%;
+img {
+  max-width: 500px;
   height: auto;
 }
 
@@ -17,7 +17,7 @@ td img {
   height: 80px;
 
   border: 2px solid #f3f3f3;
-  border-top: 3px solid #f25a41;
+  border-top: 3px solid #0069d9;
   border-radius: 100%;
 
   position: absolute;
