--- a/search/css/main.css
+++ b/search/css/main.css
@@ -1,3 +1,9 @@
+@import url("https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.1/css/bootstrap.min.css");
+html,
+body {
+  height: 100%;
+}
+
 /* Global */
 html,
 body {
