--- a/search/css/main.css
+++ b/search/css/main.css
@@ -1,4 +1,4 @@
-@import url("https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.1/css/bootstrap.min.css");
+@import url("https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css");
 html,
 body {
   height: 100%;
@@ -9,22 +9,39 @@ html,
 body {
   max-width: 100vw;
   /* overflow-x: hidden; */
-  background: #f9f9f9;
+  background: #ffffff;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  line-height: 0.79;
 }
 
 #main {
-  background: #f9f9f9;
+  /* background: #f9f9f9; */
+  min-height: 100vh;
 }
 
 .content {
-  background: #ffffff;
-  width: 900px;
-  margin: 0 auto;
+  margin: 30px 0;
+  /* background: #ffffff; */
+  /* padding: 30px; */
 }
-
+/* API IMG */
+.size-full {
+  max-width: 100% !important;
+  height: auto;
+}
 img {
   max-width: 500px;
   height: auto;
+}
+p:last-child {
+  margin-bottom: 0;
 }
 
 /* SPIN */
